# thinker

./: CMakeLists.txt  TrafficSimulator.txt  logthinker.txt
Dev22food/: CMakeLists.txt  main.cpp
Dev22food/include/: Food.h  ShowFood.h
Dev22food/src/: Food.cpp  ShowFood.cpp  script.sh
converter/: CMakeLists.txt  main.cpp
converter/data/: perceptron.json
converter/include/: DeserializeObject.h  JsonGeneratorFile.h  SerializeObject.h
converter/src/: DeserializeObject.cpp  JsonGeneratorFile.cpp  SerializeObject.cpp
optionparser/: CMakeLists.txt
optionparser/exceptions/: DefinitionException.cpp  DefinitionException.h  SemanticException.cpp  SemanticException.h  SyntaxException.cpp  SyntaxException.h
optionparser/include/: Boolean.h  IOptionType.h  Integer.h  OptionDefinition.h  OptionParser.h  OptionType.h  Real.h  Text.h
optionparser/src/: Boolean.cpp  Integer.cpp  OptionDefinition.cpp  OptionParser.cpp  Real.cpp  Text.cpp
optionparser/test/: ATest.cpp  CMakeLists.txt  ITest.cpp  UTest.cpp  main_test.cpp
thinker/: CMakeLists.txt  main.cpp  read.txt  result.json
thinker/include/: Data.h  Layer.h  LayerType.h  NeuralNetwork.h  Perceptron.h  Transition.h  TransitionByStep.h  TransitionHiperbolicTangent.h  TransitionSigmoid.h  TransitionSoftMax.h  TransitionType.h
thinker/src/: Data.cpp  Layer.cpp  NeuralNetwork.cpp  Perceptron.cpp  TransitionByStep.cpp  TransitionHiperbolicTangent.cpp  TransitionSigmoid.cpp  TransitionSoftMax.cpp
thinker/test/: AndTest.cpp  CMakeLists.txt  DataTest.cpp  LayerTest.cpp  MainTest.cpp  NeuralNetworkTest.cpp  NeuralTest.cpp  NotTest.cpp  OrTest.cpp  PerceptronTest.cpp  TransitionFunctionTests.cpp  XYTest.cpp
trafficsimulator/: CMakeLists.txt  CRC-Cards.txt  TrafficSimulator.txt  main-nestor.cpp  main.cpp
trafficsimulator/include/: Direction.h  Map.h  Simulation.h  SimulationResult.h  TrafficLight.h  TrafficSimulator.h  Vehicle.h  WindowsConsole.h
trafficsimulator/src/: Map.cpp  Simulation.cpp  SimulationResult.cpp  TrafficLight.cpp  TrafficSimulator.cpp  Vehicle.cpp  WindowsConsole.cpp
